db config changes